FE: Added functionality for deleting an instance of a song using its ID and position. Added basic cache  http interceptor
BE: Updated function for deleting track from playlist to pass the position of the track instance. Updated retry policy to include exponential backoff & maximum retries. Modified the response type of 'GetPlaylistTracks' to include the position of each track within the playlist.
